[build-system]
requires = ["scikit-build-core>=0.9"]
build-backend = "scikit_build_core.build"

[project]
name = "deflate"
dynamic = ["version"]
description = "Python wrapper for libdeflate."
readme = "README.md"
requires-python = ">=3.8"
authors = [
    { name = "Dan Watson", email = "dcwatson@gmail.com" },
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
    "Topic :: System :: Archiving :: Compression",
]

[project.urls]
Homepage = "https://github.com/dcwatson/deflate"

[project.optional-dependencies]
test = [
  "pytest>=7",
  "pytest-benchmark",
]

[tool.scikit-build]
minimum-version = "0.9"

[tool.scikit-build.metadata.version]
provider = "scikit_build_core.metadata.regex"
input = "deflate.c"
regex = '.*#define MODULE_VERSION "(?P<value>.*)"'

[tool.ruff]
extend-exclude = [
  "libdeflate",
]
lint.extend-select = [
  "B",        # flake8-bugbear
  "I",        # isort
]
lint.isort.known-first-party = ["deflate"]
